Groundwork for testing.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,3 +3,5 @@
 
 en:
   hello: "Hello world"
+  i18n_underscore_key_test_with_translation: "I18n underscore key test with translation"
+  'i18n String test with translation': "I18n String test with translation"
