--- a/config/locales/el.yml
+++ b/config/locales/el.yml
@@ -3,3 +3,5 @@
 
 el:
   hello: "Γεια σου κόσμε"
+  i18n_underscore_key_test_with_translation: "Μετάφραση με κλειδί και κατώπαβλες μέσω I18n"
+  'i18n String test with translation': "Μετάφραση με συμβολοσειρά μέσω I18n"
