--- a/config/locales/app/en.po
+++ b/config/locales/app/en.po
@@ -1,21 +1,20 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# English translations for version package.
+# Copyright (C) 2011 THE version'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the version package.
+# Nikolaos Dimitrakopoulos <EMAIL@ADDRESS>, 2011.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: version 0.0.1\n"
 "POT-Creation-Date: 2011-11-04 17:03+0200\n"
-"PO-Revision-Date: 2011-11-04 16:33+0200\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2011-11-04 16:50+0200\n"
+"Last-Translator: Nikolaos Dimitrakopoulos <EMAIL@ADDRESS>\n"
+"Language-Team: English\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: app/views/static/fu.html.erb:82
 msgid "And a new one... Mua ha ha"
@@ -24,35 +23,35 @@ msgstr ""
 #: app/views/static/fu.html.erb:62 app/views/static/fu.html.erb:67
 msgid "Gimme singular text!"
 msgid_plural "Gimme plural text for %{count}!"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Gimme singular text!"
+msgstr[1] "Gimme plural text for %{count}!"
 
 #: app/views/static/fu.html.erb:77
 msgctxt "Context"
 msgid "Gimme singular text!"
 msgid_plural "Gimme plural text for %{count}!"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Gimme singular text! (in context)"
+msgstr[1] "Gimme plural text for %{count}! (in context)"
 
 #: app/views/static/fu.html.erb:52
 msgid "Gimme text!"
-msgstr ""
+msgstr "Gimme text!"
 
 #: app/views/static/fu.html.erb:58
 msgctxt "Context"
 msgid "Gimme text!"
-msgstr ""
+msgstr "Gimme text in context!"
 
 #: app/views/static/fu.html.erb:81
 msgid "New gettext key!"
-msgstr ""
+msgstr "New gettext key!"
 
 #: app/views/static/fu.html.erb:72
 msgid "Scope|Gimme singular text!"
 msgid_plural "Gimme plural text for %{count}!"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Gimme singular text! (scoped)"
+msgstr[1] "Gimme plural text for %{count}! (scoped)"
 
 #: app/views/static/fu.html.erb:55
 msgid "Scope|Gimme text!"
-msgstr ""
+msgstr "Gimme text in scope!"
